{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 13,
  "lineage": "1aeb2d7b-e6d9-0fcd-96b4-f9879b416a93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a5b367e8dc8bd92",
            "arn": "arn:aws:ec2:us-east-1:651706759989:instance/i-035a42a543a0cb713",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035a42a543a0cb713",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c547d4421ec385c9"
              }
            ],
            "primary_network_interface_id": "eni-0c547d4421ec385c9",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_ip": "13.222.231.232",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba4ddb8527716529",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057157ea2f40bc929",
            "tags": {
              "Name": "saa-lab01-web-a"
            },
            "tags_all": {
              "Name": "saa-lab01-web-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0add3b51191c0aaaf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "i-035a42a543a0cb713",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public_a",
            "aws_vpc.lab",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a5b367e8dc8bd92",
            "arn": "arn:aws:ec2:us-east-1:651706759989:instance/i-0bc4c717202e97c74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc4c717202e97c74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bbc54a407cdcb606"
              }
            ],
            "primary_network_interface_id": "eni-0bbc54a407cdcb606",
            "private_dns": "ip-10-0-2-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.80",
            "public_ip": "54.235.29.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0223a7c79db90b015",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011ba2ffaeb78fac2",
            "tags": {
              "Name": "saa-lab01-web-b"
            },
            "tags_all": {
              "Name": "saa-lab01-web-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0add3b51191c0aaaf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "i-0bc4c717202e97c74",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public_b",
            "aws_vpc.lab",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:internet-gateway/igw-08d259984d19e275e",
            "id": "igw-08d259984d19e275e",
            "owner_id": "651706759989",
            "region": "us-east-1",
            "tags": {
              "Name": "saa-lab01-igw"
            },
            "tags_all": {
              "Name": "saa-lab01-igw"
            },
            "vpc_id": "vpc-0cec35e5c922bb893"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "igw-08d259984d19e275e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:route-table/rtb-00cd0973660d6085b",
            "id": "rtb-00cd0973660d6085b",
            "owner_id": "651706759989",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d259984d19e275e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saa-lab01-public-rt"
            },
            "tags_all": {
              "Name": "saa-lab01-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec35e5c922bb893"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "rtb-00cd0973660d6085b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0795bfaecad3c2ba6",
            "region": "us-east-1",
            "route_table_id": "rtb-00cd0973660d6085b",
            "subnet_id": "subnet-057157ea2f40bc929"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "rtbassoc-0795bfaecad3c2ba6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e40e0a4ca845701",
            "region": "us-east-1",
            "route_table_id": "rtb-00cd0973660d6085b",
            "subnet_id": "subnet-011ba2ffaeb78fac2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "rtbassoc-02e40e0a4ca845701",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:security-group/sg-0add3b51191c0aaaf",
            "description": "Allow HTTP traffic to Lab 01 web servers",
            "egress": [],
            "id": "sg-0add3b51191c0aaaf",
            "ingress": [],
            "name": "saa-lab01-web-sg",
            "name_prefix": "",
            "owner_id": "651706759989",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "saa-lab01-web-sg"
            },
            "tags_all": {
              "Name": "saa-lab01-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec35e5c922bb893"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "sg-0add3b51191c0aaaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:subnet/subnet-057157ea2f40bc929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057157ea2f40bc929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706759989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "saa-lab01-public-subnet-a"
            },
            "tags_all": {
              "Name": "saa-lab01-public-subnet-a"
            },
            "vpc_id": "vpc-0cec35e5c922bb893"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "subnet-057157ea2f40bc929",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:subnet/subnet-011ba2ffaeb78fac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011ba2ffaeb78fac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706759989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "saa-lab01-public-subnet-b"
            },
            "tags_all": {
              "Name": "saa-lab01-public-subnet-b"
            },
            "vpc_id": "vpc-0cec35e5c922bb893"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "subnet-011ba2ffaeb78fac2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:vpc/vpc-0cec35e5c922bb893",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02776a8156074441b",
            "default_route_table_id": "rtb-079631e372509f5c5",
            "default_security_group_id": "sg-0673f1a96bdef26ce",
            "dhcp_options_id": "dopt-04de0d9a8d76dac80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cec35e5c922bb893",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079631e372509f5c5",
            "owner_id": "651706759989",
            "region": "us-east-1",
            "tags": {
              "Name": "saa-lab01-vpc"
            },
            "tags_all": {
              "Name": "saa-lab01-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "vpc-0cec35e5c922bb893",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:security-group-rule/sgr-0b7521bd0e7d622e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0b7521bd0e7d622e7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0add3b51191c0aaaf",
            "security_group_rule_id": "sgr-0b7521bd0e7d622e7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "sgr-0b7521bd0e7d622e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706759989:security-group-rule/sgr-03589a9c3e97ff178",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from the Internet",
            "from_port": 80,
            "id": "sgr-03589a9c3e97ff178",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0add3b51191c0aaaf",
            "security_group_rule_id": "sgr-03589a9c3e97ff178",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706759989",
            "id": "sgr-03589a9c3e97ff178",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.lab"
          ]
        }
      ]
    }
  ]
}